# rplidar-rpc

./: CMakeLists.txt  README.md  main.cpp
device/lidar/: CMakeLists.txt  main.cpp
device/lidar/imp/: rplidar_a1m1.cpp  rplidar_a1m1.h
device/lidar/script/: 00-ttyUSB0-udev.rules
device/lidar/src/: lidar.cpp
device/lidar/thrid/RPLidarA1M1/: Makefile  mak_common.inc  mak_def.inc
include/: lidar_client_imp.h  lidar_server_imp.h
include/3rd/google-protobuf-ext/: DelimitedOperator.h
include/3rd/spdlog/: async_logger.h  common.h  formatter.h  logger.h  spdlog.h  tweakme.h
include/3rd/spdlog/details/: async_log_helper.h  async_logger_impl.h  file_helper.h  log_msg.h  logger_impl.h  mpmc_bounded_q.h  os.h  pattern_formatter_impl.h  registry.h  spdlog_impl.h
include/3rd/spdlog/fmt/: fmt.h  ostr.h
include/3rd/spdlog/sinks/: ansicolor_sink.h  base_sink.h  dist_sink.h  file_sinks.h  null_sink.h  ostream_sink.h  sink.h  stdout_sinks.h  syslog_sink.h  wincolor_sink.h
include/device/: lidar.h
pb/: lidar.grpc.pb.cc  lidar.grpc.pb.h  lidar.pb.cc  lidar.pb.h  lidar.proto  make.sh
src/: lidar_client_imp.cpp  lidar_server_imp.cpp
